--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,12 @@
 services:
   - type: web
     name: paperbagglue-chat
+    env: python
     runtime: python-3.12.0
     plan: free
-    region: oregon
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: gunicorn -w 2 -b 0.0.0.0:$PORT src.api.app:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: python src/api/app.py
     envVars:
       - key: PORT
         value: 5000
-      - key: PYTHON_VERSION
-        value: 3.12.0
 
-    autoDeploy: true
