--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ coze-workload-identity==0.1.4
 cozeloop==0.1.25
 cryptography==46.0.4
 cssselect==1.4.0
+dbus-python==1.3.2
 deprecation==2.1.0
 dill==0.4.1
 distro==1.9.0
@@ -77,9 +78,9 @@ openpyxl==3.1.5
 orjson==3.11.7
 ormsgpack==1.12.2
 packaging==25.0
-pandas==2.3.0
+pandas==2.2.2
 paragraphs==1.0.1
-pillow==10.4.0
+pillow==10.3.0
 platformdirs==4.5.1
 pluggy==1.6.0
 postgrest==2.27.3
@@ -93,6 +94,7 @@ pycparser==3.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
+PyGObject==3.48.2
 pyiceberg==0.11.0
 PyJWT==2.10.1
 pylint==3.1.0
