--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,23 @@
-# fly.toml app configuration file generated for paperbagglue-chat on 2026-02-17T14:30:00Z
+# fly.toml app configuration file generated for paperbagglue-chat-v1 on 2026-02-18T15:19:41Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "paperbagglue-chat"
-primary_region = "hkg"  # 香港区域，亚洲用户访问更快
+app = 'paperbagglue-chat-v1'
+primary_region = 'iad'
 
 [build]
-  [build.args]
-    PYTHON_VERSION = "3.12"
-
-[env]
-  PORT = "8080"
-  PYTHONUNBUFFERED = "1"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
-
-  [[http_service.checks]]
-    interval = "30s"
-    timeout = "5s"
-    grace_period = "10s"
-    method = "GET"
-    path = "/health"
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
-
-[[statics]]
-  guest_path = "/app/src/api/static"
-  url_prefix = "/static"
+  memory_mb = 1024
